--- a/spiritAnimal.html
+++ b/spiritAnimal.html
@@ -1,55 +1,70 @@
-<!doctype html> 
-<html lang="en"> 
-	<head> 
-	<!-- Required meta tags --> 
-	<meta charset="utf-8"> 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
 
-	<script>
+  	<script>
 
-		var myFirstVariable = 8;
+  		var myFirstVariable = 8;
 
-		function myFirstFunction() {
+  		function button1() {
 
-			hmtl = "<p>Ok then. Jumping straight to extreme comfort zone. Your spirit animal is: </p><img src='sloth.jpg'>";
+  			html = "<p>Ok then. Jumping straight to extreme comfort zone. Your spirit animal is:</p><img src='sloth.jpg' class='imgSize'>";
 
-			document.getElementById("content").innerHTML = html;
-		}
+  			document.getElementById("content").innerHTML = html;
 
-		function button2() {
-			html = "<img src='giraffe.jpg'>";
-
-			document.getElementById("content").innerHTML = html;
-		}
-		
-
-	</script> 
-
-	<style>
-	.assessment {
-		background: red;
-	}
-		#content {
-			background: grey;
-		}
-
-	</style>
-
-	</head>
-	
-	<body>
-	<html>
-	<h1>Spirit Animal Quiz</h1>
-
-	<button onclick="myFirstFunction()">Button 1</button>
-	<button onclick=>Button 2</button>
-	<button>Button 3</button>
-
-	<div class="assessment">
-		<h3>Assessment</h3>
-		<div id="content">
-		
+  		}
 
 
-	</div>
-</body> 
-	</html> 
+  		function button2() {
+
+  			html = "<img src='giraffe.jpg'>";
+  			
+  			document.getElementById("content").innerHTML = html;
+
+  		}
+
+  		
+
+
+  	</script> 
+
+  	<style>
+  		.assessment {
+  			background: red;
+  		}
+  		#content {
+  			background: grey;
+  		}
+
+  		.imgSize {
+  			width: 50%;
+  			height: 50%;
+  		}
+
+  	</style>
+
+  </head>
+
+  <body>
+
+  	<h1>Spirit Animal Quiz</h1>
+
+  	<button onclick="button1()">Button 1</button>
+  	<button onclick="button2()">Button 2</button>
+  	<button>Button 3</button>
+
+  	<div class="assessment">
+  		<h3>Assessment</h3>
+
+  		<div id="content">
+
+<p>Ok then. Jumping straight to extreme comfort zone. Your spirit animal is:</p><img src='sloth.jpg' class='imgSize'>
+
+  		</div>
+  	</div>
+
+  </body>
+
+ </html>
