--- a/bed.html
+++ b/bed.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="style.css" rel="stylesheet">
+<link href="addstyle.css" rel="stylesheet">
 <script defer src="game.js"></script>
 <title>THE BED</title> 
 </head> 
