--- a/fridge.html
+++ b/fridge.html
@@ -33,7 +33,7 @@ initial-scale=1.0">
 
 		 		<div class="interface">
 		 			<a href="#" onclick="GameManager.setGameStart('bottleOpener')">
-		 					<img src="img/weapons/bottle.png">
+		 					<img src="bottle.png">
 		 				<div> 
 		 					<h3>Bottle Opener</h3>
 		 					<p>Simple, no frills stainless steel bottle opener.</p>
@@ -42,7 +42,7 @@ initial-scale=1.0">
 
 
 		 				<a href="#" onclick="GameManager.setGameStart('spork')">
-		 				<img src="img/weapons/spork.png"> 
+		 				<img src="spork.png"> 
 		 				<div> 
 		 					<h3>Spork</h3>
 		 					<p>A plastic spoon and a fork in one, so multifunctional.</p>
@@ -50,7 +50,7 @@ initial-scale=1.0">
 		 				</div>
 		 			</a>
 		 				<a href="#" onclick="GameManager.setGameStart('teaKettle')">
-		 				<img src="img/weapons/teakettle.png"> 
+		 				<img src="teakettle.png"> 
 		 				<div> 
 		 					<h3>Tea Kettle</h3>
 		 					<p>A stainless steel kettle full of boiling water.</p>
