--- a/bed.html
+++ b/bed.html
@@ -6,7 +6,7 @@
 initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="addstyle.css" rel="stylesheet">
-<script defer src="game.js"></script>
+<script src="game.js"></script>
 <title>THE BED</title> 
 </head> 
 
