--- a/bed.html
+++ b/bed.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8"> 
 <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="addstyle.css" rel="stylesheet">
+<link href ="addstyle.css" rel ="stylesheet">
 <script src="game.js"></script>
 <title>THE BED</title> 
 </head> 
@@ -30,6 +30,10 @@ initial-scale=1.0">
     <div id="restart">
       <a href="click_start.html"> Return to Start </a>
   </div>
+	
+	<div id="header"> 
+		<img src="bed-01.jpg">
+	</div> 
 
 
   <style>
@@ -43,18 +47,6 @@ a{
       text-decoration: underline;
     }
 
-
-  
-  #scene {
-			background: url("bed-01.jpg") no-repeat;
-			height: 600px;
-			width: 1065px;
-
-			position: absolute;
-			top: 20px;
-			left: 20px;
-
-		}
 
     #restart {
   position: absolute;
