--- a/bed.html
+++ b/bed.html
@@ -28,6 +28,10 @@ initial-scale=1.0">
       <a href="click_start.html"> Return to Start </a>
   </div>
 	
+		<div id="header"> 
+		<img src="bed-01.jpg">
+	</div> 
+	
 
 
   <style>
